2009-09-20  Christopher Faylor  <me+cygwin@cgf.cx>

	* dcrt0.cc (dll_crt0_1): Add another hack to REALLY make sure that
	cxx_malloc is always set to the cygwin version.

2009-09-20  Christopher Faylor  <me+cygwin@cgf.cx>

	* external.cc (cygwin_internal): Add hack to always reset cxx_malloc to
	proper value.

	* lib/_cygwin_crt0_common.cc (_cygwin_crt0_common): Relocate wayward
	comment.

2009-09-19  Christopher Faylor  <me+cygwin@cgf.cx>

	* exceptions.cc (sigpacket::process): Explicitly set thread-specific
	handler function to zero to avoid transferring to incorrect location.
	(_cygtls::call_signal_handler): Don't transfer to handler if there is
	no handler to transfer to.

2009-09-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* exceptions.cc (sigpacket::process): Give sigwait() processing
	precedence even when a handler is present.

	* syscalls.cc (getpagesize): Change return to 'int'.

2009-09-16  Christopher Faylor  <me+cygwin@cgf.cx>

	* ntea.c (write_ea): Don't abort if not-samba.

2009-09-01  Christopher Faylor  <me+cygwin@cgf.cx>

	* select.cc (peek_console): Always check window size when there is ANY
	keyboard activity.

2009-08-26  Corinna Vinschen  <corinna@vinschen.de>

	* path.h (INTERIX_SYMLINK_COOKIE): Define.
	* path.cc (symlink_info::check_sysfile): Read Interix symlinks as well.

2009-08-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Only set R/O attribute if ACLs
	are not used.

2009-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Add comment.
	* path.cc (symlink_info::check_reparse_point): Return -1 for volume
	mount points.  Explain why.
	(symlink_info::check): Call fs.update again for volume mount points.
	Explain why.

2009-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* globals.cc (ro_u_volume): New R/O unicode string.
	* path.cc (symlink_info::check_reparse_point): Fix check for volume
	mount points to work on Vista and later as well.
