@@ -1,3 +1,8 @@
+2009-09-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_disk_file.cc (fhandler_disk_file::link): Drop faking hardlink
+	creation on filesystems not supporting hardlinks.
+
 2009-09-20  Christopher Faylor  <me+cygwin@cgf.cx>
 
 	* dcrt0.cc (dll_crt0_1): Add another hack to REALLY make sure that
